--- a/mdvrset/src/main/res/values-zh-rCN/strings.xml
+++ b/mdvrset/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ADAS标定</string>
+    <string name="app_name">MM</string>
     <string name="dms_calibration">标定</string>
     <string name="dms_calibration2">视频功能设置</string>
     <string name="start_calibration">开始标定</string>
@@ -368,4 +368,6 @@
     <string name="fullmsg">注意：云手机进入全屏控制界面后，点击悬浮窗选择退出按钮方可退出全屏控制界面。</string>
     <string name="confirm">确定</string>
     <string name="cancle">取消</string>
+    <string name="wait_p2p_network">"正在创建网络连接，请稍候再试......"</string>
+    <string name="loading_home">正在加载…</string>
 </resources>
