--- a/mdvrset/src/main/res/values/strings.xml
+++ b/mdvrset/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AdasCalib</string>
+    <string name="app_name">MM</string>
     <string name="dms_calibration">Calibration</string>
     <string name="dms_calibration2">Video feature settings</string>
     <string name="start_calibration">Start Calibration</string>
@@ -364,4 +364,6 @@
     <string name="fullmsg">注意：云手机进入全屏控制界面后，点击悬浮窗选择退出按钮方可退出全屏控制界面。</string>
     <string name="confirm">确定</string>
     <string name="cancle">取消</string>
+    <string name="wait_p2p_network">"正在创建网络连接，请稍候再试......"</string>
+    <string name="loading_home">正在加载…</string>
 </resources>
