--- a/mdvrset/src/main/res/values/strings.xml
+++ b/mdvrset/src/main/res/values/strings.xml
@@ -366,4 +366,5 @@
     <string name="cancle">取消</string>
     <string name="wait_p2p_network">"正在创建网络连接，请稍候再试......"</string>
     <string name="loading_home">正在加载…</string>
+    <string name="refresh">refresh</string>
 </resources>
