--- a/mdvrset/src/main/res/values/strings.xml
+++ b/mdvrset/src/main/res/values/strings.xml
@@ -365,6 +365,6 @@
     <string name="confirm">确定</string>
     <string name="cancle">取消</string>
     <string name="wait_p2p_network">"正在创建网络连接，请稍候......\n如一直连接不上，请尝试开关飞行模式再重新连接!"</string>
-    <string name="loading_home">正在加载…</string>
-    <string name="refresh">refresh</string>
+    <string name="loading_home">Loading...</string>
+    <string name="refresh">Refresh</string>
 </resources>
