added save progress dialog

--- a/mdvrset/src/main/res/values-zh-rCN/strings.xml
+++ b/mdvrset/src/main/res/values-zh-rCN/strings.xml
@@ -354,4 +354,5 @@
     <string name="adas_set_json_error">参数设置失败，参数错误！</string>
     <string name="adas_set_error_network">参数设置失败，网络错误！</string>
     <string name="adas_note_wifi_connected">请先连接至MDVR设备WIFI热点再进行标定!</string>
+    <string name="save_adas">正在保存设置...</string>
 </resources>
