--- a/mdvrset/src/main/res/values-zh-rCN/strings.xml
+++ b/mdvrset/src/main/res/values-zh-rCN/strings.xml
@@ -354,6 +354,7 @@
     <string name="set_json_error">参数设置失败，参数错误！</string>
     <string name="set_error_network">参数设置失败，网络错误！</string>
     <string name="note_wifi_connected">请先连接至MDVR设备WIFI热点再进行标定!</string>
+    <string name="save_adas">正在保存设置...</string>
 
     <string name="power_key">电源键</string>
     <string name="back_key">后退键</string>
