--- a/mdvrset/src/main/res/values/strings.xml
+++ b/mdvrset/src/main/res/values/strings.xml
@@ -288,7 +288,7 @@
     <string name="advance_setting">Advanced settings</string>
 
     <string name="adas_settings">ADAS settings</string>
-    <string name="dsm_settings">DSM settings</string>
+    <string name="dms_settings">DMS settings</string>
     <string name="bsd_settings">BSD settings</string>
     <string name="bsd1_settings">BSD1 settings</string>
     <string name="bsd2_settings">BSD2 settings</string>
@@ -355,26 +355,31 @@
     <string name="camera_left_rear">left rear</string>
     <string name="camera_center_front">center front</string>
 
+    <string name="dms_step1">1. DMS installs and adjusts the camera position according to the step-by-step requirements, without the need to save settings.</string>
+    <string name="dms_step2">2. The DMS camera is recommended to be installed directly in front of the driver or at the A-pillar of the cockpit. When installing, the camera should be as close as possible to the front of the driver, and the display screen of the camera should ensure that the driver\'s head is not lost in the picture. The camera installation position of some car models may have facial obstruction in the image, and the camera can be shifted left/right until the camera does not obstruct the face.</string>
+    <string name="dms_step3">3. When the DMS camera is installed directly in front of the driver, it is necessary to ensure that the face angle is less than 20 °; When installing on the A-pillar, it is necessary to ensure that the left and right angles of the face are less than 30 °.</string>
+    <string name="dms_step4">4. If it is necessary to support the seat belt detection function, the screen must ensure that at least 10cm of the driver\'s armpit can be seen.</string>
+
     <string name="set_ok">Parameter setting successful!</string>
     <string name="set_json_error">Parameter setting failed, parameter error!</string>
     <string name="set_error_network">Parameter setting failed, network error!</string>
     <string name="note_wifi_connected">Please connect to the WIFI hotspot of the MDVR before calibrating!</string>
-    <string name="save_adas">Saving settings...</string>
+    <string name="save_adas">Saving settings…</string>
 
-    <string name="power_key">电源键</string>
-    <string name="back_key">后退键</string>
-    <string name="volumn_add">音量键+</string>
-    <string name="volumn_del">音量键-</string>
-    <string name="home_key">显示桌面</string>
-    <string name="reconnect">断线重连</string>
-    <string name="system_reboot">重启手机</string>
-    <string name="screen_dpi">高清显示</string>
-    <string name="exit_full">退出全屏</string>
-    <string name="fullctl">开始控制云手机</string>
-    <string name="fullmsg">注意：云手机进入全屏控制界面后，点击悬浮窗选择退出按钮方可退出全屏控制界面。</string>
-    <string name="confirm">确定</string>
-    <string name="cancle">取消</string>
-    <string name="wait_p2p_network">"正在创建网络连接，请稍候......\n如一直连接不上，请尝试开关飞行模式再重新连接!"</string>
-    <string name="loading_home">Loading...</string>
+    <string name="power_key">Power</string>
+    <string name="back_key">Back</string>
+    <string name="volumn_add">Volume+</string>
+    <string name="volumn_del">Volume-</string>
+    <string name="home_key">Home</string>
+    <string name="reconnect">Reconnect</string>
+    <string name="system_reboot">Reboot</string>
+    <string name="screen_dpi">HD</string>
+    <string name="exit_full">Exit</string>
+    <string name="fullctl">Start controlling the device</string>
+    <string name="fullmsg">Note: After entering the full screen control interface, click on the floating window and select the exit button to exit the full screen control interface.</string>
+    <string name="confirm">confirm</string>
+    <string name="cancle">cancle</string>
+    <string name="wait_p2p_network">"Creating wifip2o network connection, please wait…\nIf you have been unable to connect, please try switching on and off the flight mode before reconnecting!"</string>
+    <string name="loading_home">Loading…</string>
     <string name="refresh">Refresh</string>
 </resources>
