--- a/mdvrset/src/main/res/values-zh-rCN/strings.xml
+++ b/mdvrset/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">标定</string>
+    <string name="app_name">AI标定</string>
     <string name="dms_calibration">标定</string>
     <string name="dms_calibration2">视频功能设置</string>
     <string name="start_calibration">开始标定</string>
