--- a/mdvrset/src/main/res/values/strings.xml
+++ b/mdvrset/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Calibration</string>
+    <string name="app_name">AI Calibration</string>
     <string name="dms_calibration">Calibration</string>
     <string name="dms_calibration2">Video feature settings</string>
     <string name="start_calibration">Start Calibration</string>
